<resources>
	<string name="app_name">lib</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="sent_nearby">sent_nearby</string>
	<string name="on_device_found">on_device_found</string>
	<string name="shake_your_phone">shake_your_phone</string>
	<string name="sent_location">Sent Location</string>
	<string name="refresh">Refresh</string>
	<string name="time">time</string>

	<string name="scan_check_text">สแกนเพื่อเช็คอิน</string>
	<string name="problem_press_text">หากการสแกนมีปัญหา กรุณากด</string>
	<string name="self_check_text">ลงชื่อด้วยตัวเอง</string>

	<string name="confirm_text">ยืนยัน</string>
	<string name="check_success_text">เรียบร้อยแล้ว</string>
	<string name="time_text">เวลา</string>
	<string name="example_time_text">HH.mm</string>
	<string name="check_hub">กรุณาเลือกคลัง</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="stock_check_in_text">เลือกคลังที่ต้องการเช็คอิน</string>
	<string name="choiceText">เลือก</string>
	<string name="stockStation">stockStation</string>
	<string name="checkin_text">เข้างาน</string>
	<string name="checkout_text">ออกงาน</string>
	<string name="check_between_text">ระหว่างวัน</string>
	<string name="full_checkin_text">ลงชื่อเข้างาน</string>
	<string name="full_checkout_text">ลงชื่อออกงาน</string>
	<string name="full_check_between_text">ลงชื่อระหว่างวัน</string>
	<string name="generate_qrcode">generate QR Code</string>
	<string name="littleMinute">น.</string>
	<string name="qrUsed">QR code นี้ถูกใช้ไปแล้ว</string>
	<string name="notWorking">ไม่สามารถใช้งานได้</string>
	<string name="scanAgain">สแกนอีกครั้ง</string>
	<string name="historyCheckIn">ประวัติการเข้างาน</string>
	<string name="dateFormate">DD-MMMM-YYYY</string>
	<string name="example_user_name">Usernamme surname</string>
	<string name="example_date">Day , dd MMM</string>
	<string name="hub_name_example">HubName</string>
	<string name="type_check_in_example">type check in</string>
	<string name="date_history">%1$s %2$s %3$s</string>
	<string name="date_checkin">%1$s , %2$s %3$s</string>
	<string name="not_mock_text">กรุณาเปิดการระบุตำแหน่งให้ถูกต้อง</string>
	<string name="semi_colon">:</string>
	<string name="question_operator">.?????</string>
	<string name="wrong_locationId">คลังที่คุณเลือกไม่ตรงกับระบบ</string>
	<string name="camera_text">Camera</string>
	<string name="manual_text">Manual</string>
	<string name="auto_text">Auto Checkout</string>
	<string name="nearby_fine">ค้นหาคลังรอบตัว</string>
	<string name="finding">กำลังค้นหา...</string>
	<string name="submit_text"> ตกลง </string>
	<string name="cancel_text">ยกเลิก</string>
	<string name="try_again"> ลองอีกครั้ง </string>
	<string name="statusManual">Manual</string>
	<string name="statusAuto">Auto</string>
	<string name="statusNormal">Normal</string>
	<string name="stringDialogMessageWarningGPS">กรุณาเปิด GPS บนมือถือของคุณ</string>
	<string name="stringDialogTitleWarning">แจ้งเตือน</string>
	<string name="stringTurnOn">เปิด</string>
</resources>
