<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:background="@color/white"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  tools:context=".fragment.SuccessDialogFragment"
			  android:orientation="vertical">
	<ImageView
			android:src="@drawable/pic_success_checkin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
	<LinearLayout
			android:gravity="center"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<TextView
				android:id="@+id/status_checkin1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/black"
				android:text="@string/checkin_text"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/black"
				android:text="@string/check_success_text"/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center">
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/time_text"/>
		<TextView
				android:id="@+id/status_checkin2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/colorGray"
				android:text="@string/checkin_text"/>
		<TextView
				android:id="@+id/timeCheckIn"
				android:gravity="center"
				android:layout_marginStart="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/example_time_text"/>
		<TextView
				android:gravity="center"
				android:layout_marginStart="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/littleMinute"/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="20dp">
		<Button
				android:id="@+id/confirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/purple"
				android:textColor="@color/white"
				android:text="@string/confirm_text"/>
	</LinearLayout>
</LinearLayout>