<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".activity.ScanQrActivity">

	<com.journeyapps.barcodescanner.CompoundBarcodeView
			android:id="@+id/scanner_fragment"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="bottom" />

	<com.google.android.material.appbar.CollapsingToolbarLayout
			android:layout_width="match_parent"
			android:layout_height="?android:attr/actionBarSize"
			android:background="@color/white">

		<ImageView
				android:id="@+id/back_page"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:paddingStart="20dp"
				android:paddingEnd="20dp"
				android:src="@drawable/ic_back"
				tools:ignore="ContentDescription" />

		<TextView
				android:id="@+id/type_check_in"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_gravity="center_horizontal"
				android:gravity="center"
				android:text="@string/type_check_in_example"
				android:textColor="@color/black"
				android:textSize="20sp" />
	</com.google.android.material.appbar.CollapsingToolbarLayout>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:paddingTop="100dp"
			android:text="@string/scan_check_text"
			android:textColor="@color/white"
			android:textSize="20sp"
			tools:ignore="MissingConstraints" />

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom"
			android:paddingBottom="100dp"
			android:text="@string/problem_press_text"
			android:textColor="@color/white"
			android:textSize="20sp"
			tools:ignore="MissingConstraints" />

	<TextView
			android:id="@+id/self_checkin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom"
			android:paddingBottom="60dp"
			android:text="@string/self_check_text"
			android:textColor="@color/purple"
			android:textSize="20sp"
			tools:ignore="MissingConstraints" />
</FrameLayout>