<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:orientation="vertical">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<ImageView
				android:id="@+id/back_to_menu"
				android:layout_width="?android:attr/actionBarSize"
				android:layout_height="?android:attr/actionBarSize"
				android:adjustViewBounds="true"
				android:padding="10dp"
				android:scaleType="centerInside"
				android:src="@drawable/ic_back"
				tools:ignore="ContentDescription" />
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingStart="50dp"
			android:paddingEnd="0dp"
			android:paddingBottom="10dp">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/full_checkin_text"
				android:textColor="@color/black"
				android:textSize="30sp" />

		<TextView
				android:id="@+id/date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/example_date"
				android:textColor="@color/gray" />
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical">

		<ImageView
				android:id="@+id/pic_checkin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:src="@drawable/phone_main"
				tools:ignore="ContentDescription" />

		<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/layoutRecycle"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_marginStart="15dp"
				android:layout_weight="1">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginStart="30dp"
					android:layout_marginEnd="5dp"
					android:src="@mipmap/line"
					app:layout_constraintStart_toStartOf="parent"
					tools:ignore="ContentDescription" />

			<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/historyRecycle"
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"
					app:layout_constraintTop_toTopOf="parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<Button
				android:id="@+id/checkInBtn"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:background="@color/purple"
				android:padding="10sp"
				android:text="@string/checkin_text"
				android:textColor="@color/white"
				android:textSize="20sp" />

		<Button
				android:id="@+id/checkBetBtn"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:background="@color/purple"
				android:padding="10sp"
				android:text="@string/check_between_text"
				android:textColor="@color/white"
				android:textSize="20sp" />

		<Button
				android:id="@+id/checkOutBtn"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:background="@color/purple"
				android:padding="10sp"
				android:text="@string/checkout_text"
				android:textColor="@color/white"
				android:textSize="20sp" />
	</LinearLayout>
</LinearLayout>