<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:orientation="vertical"
		app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

	<ImageView
			android:id="@+id/back_page"
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:padding="20dp"
			android:src="@drawable/ic_back"
			tools:ignore="ContentDescription" />

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:text="@string/self_check_text"
			android:textColor="@color/black"
			android:textSize="25sp" />

	<TableLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="25dp"
			android:layout_marginEnd="25dp"
			android:stretchColumns="1">

		<TableRow>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:gravity="center_horizontal"
					android:orientation="vertical"
					tools:ignore="UseCompoundDrawables">

				<ImageView
						android:id="@+id/checkin_pic"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:padding="20dp"
						android:src="@drawable/ic_checkin_color"
						tools:ignore="ContentDescription" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/checkin_text"
						android:textColor="@color/black"
						android:textSize="18sp" />
			</LinearLayout>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:gravity="center"
					android:orientation="vertical"
					tools:ignore="UseCompoundDrawables">

				<ImageView
						android:id="@+id/between_pic"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:padding="20dp"
						android:src="@drawable/ic_checkin_gray"
						tools:ignore="ContentDescription" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/check_between_text"
						android:textColor="@color/black"
						android:textSize="18sp" />
			</LinearLayout>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:gravity="center"
					android:orientation="vertical"
					tools:ignore="UseCompoundDrawables">

				<ImageView
						android:id="@+id/checkout_pic"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:padding="20dp"
						android:src="@drawable/ic_checkin_gray"
						tools:ignore="ContentDescription" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/checkout_text"
						android:textColor="@color/black"
						android:textSize="18sp" />

			</LinearLayout>
		</TableRow>
	</TableLayout>

	<LinearLayout
			android:id="@+id/checkInHub"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="25dp"
			android:layout_marginTop="25dp"
			android:layout_marginRight="25dp"
			android:orientation="horizontal"
			tools:ignore="UseCompoundDrawables">

		<TextView
				android:id="@+id/stockName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/check_hub"
				android:textColor="@color/gray"
				android:textSize="25sp" />

		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginEnd="10dp"
				android:src="@drawable/ic_arrow_down"
				tools:ignore="ContentDescription" />
	</LinearLayout>

	<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="25dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="25dp"
			android:background="@color/gray" />

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="10dp">

		<Button
				android:id="@+id/confirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:background="@color/gray"
				android:enabled="false"
				android:text="@string/confirm_text"
				android:textColor="@color/white" />
	</LinearLayout>
</LinearLayout>