<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="10dp"
		tools:context=".fragment.CheckInDialogFragment">

	<TextView
			android:id="@+id/hub_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:textColor="@color/black"
			android:textSize="25sp" />

	<TableLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginStart="25dp"
			android:layout_marginEnd="25dp">
		<TableRow>
			<LinearLayout
					android:id="@+id/checkin_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:gravity="center_horizontal"
					android:orientation="vertical"
					tools:ignore="UseCompoundDrawables">

				<ImageView
						android:id="@+id/checkin_pic"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:padding="20dp"
						android:src="@drawable/ic_checkin_gray"
						tools:ignore="ContentDescription" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/checkin_text"
						android:textColor="@color/black"
						android:textSize="18sp" />
			</LinearLayout>

			<LinearLayout
					android:id="@+id/between_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:gravity="center"
					android:orientation="vertical"
					tools:ignore="UseCompoundDrawables">

				<ImageView
						android:id="@+id/between_pic"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:padding="20dp"
						android:src="@drawable/ic_checkin_gray"
						tools:ignore="ContentDescription" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/check_between_text"
						android:textColor="@color/black"
						android:textSize="18sp" />
			</LinearLayout>

			<LinearLayout
					android:id="@+id/checkout_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:gravity="center"
					android:orientation="vertical"
					tools:ignore="UseCompoundDrawables">

				<ImageView
						android:id="@+id/checkout_pic"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:padding="20dp"
						android:src="@drawable/ic_checkin_gray"
						tools:ignore="ContentDescription" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/checkout_text"
						android:textColor="@color/black"
						android:textSize="18sp" />

			</LinearLayout>
		</TableRow>
	</TableLayout>

	<LinearLayout
			android:padding="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">

		<Button
				android:id="@+id/cancel_checkin"
				android:text="@string/cancel_text"
				android:textSize="20sp"
				android:textColor="@color/purple"
				android:background="@drawable/button_border"
				android:paddingStart="30dp"
				android:paddingEnd="30dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="15dp"
				android:gravity="center"
				tools:ignore="ButtonStyle" />
		<Button
				android:id="@+id/confirm_checkin"
				android:text="@string/confirm_text"
				android:textSize="20sp"
				android:textColor="@color/white"
				android:background="@color/purple"
				android:paddingStart="30dp"
				android:paddingEnd="30dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="15dp"
				android:gravity="center"
				tools:ignore="ButtonStyle" />
	</LinearLayout>

</LinearLayout>